# opengl_cv_1

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  b.sh  full_desk_params.txt  main.cpp  params.txt  r.sh  run.sh  video_params.txt
calibrate/: CMakeLists.txt  b.sh  c.sh  desk_params.txt  desk_params2.txt  given.sh  main.cpp  mine.sh  params.txt  video_params.txt
nehe_lessons/lesson01_linux/: lesson1.c
shaders/: frag_0.frag  frag_basic.frag  frag_basic_global_color_no_light.frag  frag_model.frag  vert_0.vert  vert_basic.vert  vert_image.vert
shapes/: Box.cpp  Box.h  Cone.cpp  ImageSquare.cpp  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h
superimpose/: CMakeLists.txt  main.cpp  params.txt  video_params.txt
superimpose/objects/: teapot_obj.h
superimpose/shaders/: frag_image.frag  vert_basic.vert  vert_basic_global_color.vert  vert_basic_no_color.vert  vert_image.vert  vert_model.vert
superimpose/shapes/: Cone.h  ImageSquare.cpp  ImageSquare.h  Sphere.cpp
superimpose/util/: DrawState.cpp  DrawState.h  Mesh.cpp  Model.h  SelectBox.h  ShaderProgram.h  const.h  teapot.cpp  teapot.h  util.cpp  util.h
util/: DrawState.cpp  DrawState.h  Mesh.h  Model.cpp  ShaderProgram.cpp  ShaderProgram.h  const.h  util.cpp  util.h
